<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_4">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ingredients_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_10"
        app:strokeColor="@color/strokeColor"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredient_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:background="@color/cardBackgroundColor">

            <View
                android:id="@+id/white_background"
                android:layout_width="@dimen/width_120"
                android:layout_height="@dimen/height_0"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ingredient_imageView"
                android:layout_width="@dimen/width_100"
                android:layout_height="@dimen/height_100"
                app:layout_constraintStart_toStartOf="@+id/white_background"
                app:layout_constraintEnd_toEndOf="@+id/white_background"
                app:layout_constraintTop_toTopOf="@+id/white_background"
                app:layout_constraintBottom_toBottomOf="@+id/white_background"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/ingredient_name"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginEnd="@dimen/margin_12"
                android:text="@string/name"
                android:fontFamily="@font/courgette"
                android:textSize="@dimen/text_20"
                android:textStyle="bold"
                android:textColor="@color/titleColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/white_background"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ingredient_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:text="@string/_100"
                app:layout_constraintStart_toStartOf="@+id/ingredient_name"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_name" />

            <TextView
                android:id="@+id/ingredient_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:text="@string/grams"
                app:layout_constraintBottom_toBottomOf="@+id/ingredient_amount"
                app:layout_constraintStart_toEndOf="@+id/ingredient_amount"
                app:layout_constraintTop_toTopOf="@+id/ingredient_amount" />

            <TextView
                android:id="@+id/ingredient_consistency"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginEnd="@dimen/margin_12"
                android:text="@string/consistency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ingredient_amount"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_amount" />

            <TextView
                android:id="@+id/ingredient_original"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginEnd="@dimen/margin_12"
                android:layout_marginBottom="@dimen/margin_12"
                android:text="@string/original"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ingredient_consistency"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_consistency"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>