<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".ui.fragments.overview.OverviewFragment">


    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="@dimen/width_0"
        android:layout_height="@dimen/height_250"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_100"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_12"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/gradient_overlay" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@+id/time_textView"
        app:layout_constraintEnd_toEndOf="@+id/time_textView"
        app:layout_constraintStart_toStartOf="@+id/time_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/likes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_textView"
        app:layout_constraintEnd_toStartOf="@+id/time_textView" />

    <ImageView
        android:id="@+id/likes_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/likes_textView"
        app:layout_constraintEnd_toEndOf="@+id/likes_textView"
        app:layout_constraintStart_toStartOf="@+id/likes_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_12"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_imageView" />

    <ImageView
        android:id="@+id/vegetarian_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/title_textView"
        app:layout_constraintTop_toBottomOf="@+id/title_textView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/vegetarian_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:text="@string/vegetarian"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_imageView" />

    <ImageView
        android:id="@+id/vegan_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/vegan_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:text="@string/vegan"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

    <ImageView
        android:id="@+id/gluten_free_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_textView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/gluten_free_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:text="@string/gluten_free"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageView"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_imageView"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_imageView" />

    <ImageView
        android:id="@+id/dairy_free_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/gluten_free_imageView"
        app:layout_constraintTop_toBottomOf="@+id/gluten_free_imageView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/dairy_free_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:text="@string/dairy_free"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_imageView"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_imageView"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_imageView" />

    <ImageView
        android:id="@+id/healthy_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_textView"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_textView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/healthy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:text="@string/healthy"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView"
        app:layout_constraintStart_toEndOf="@+id/healthy_imageView"
        app:layout_constraintTop_toTopOf="@+id/healthy_imageView" />

    <ImageView
        android:id="@+id/cheap_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/healthy_imageView"
        app:layout_constraintTop_toBottomOf="@+id/healthy_imageView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/cheap_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:text="@string/cheap"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
        app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
        app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="@dimen/text_16" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>